# pica

./: Cargo.toml  README.md  build.gradle  build.gradle.kts  gradle.properties  package.json
docs/: intro.md  pica.graffle
old/: grammar.mly  settings.gradle.kts
src/: actions.ts  ast.rs  ast.ts  defs.ts  exprs.ts  grammar.lalrpop  lexer.rs  main.rs  parser_test.rs  stypes.ts  twist.rs  twist.ts
src/ast/: mod.rs
src/compiler/: mod.rs  tests.rs
src/lexer/: linecol.rs  mod.rs  tests.rs
src/main/antlr/org/goodmath/pica/parser/: PicaGrammar.g4
src/main/antlr/org/goodmath/pica/vm/: QuarkPlasmaAssembly.g4
src/main/java/org/goodmath/pica/: Main.java  PicaCompilationException.java
src/main/java/org/goodmath/pica/ast/: AstBuilder.java  AstNode.java  Definition.java  FunctionDef.java  Identifier.java  Pair.java  PicaModule.java  TempWrapper.java  TypeParamSpec.java  TypedParameter.java  Use.java  UseDef.java
src/main/java/org/goodmath/pica/cli/: CompileCommand.java
src/main/java/org/goodmath/pica/compiler/: Compiler.java  PicaCompiler.java  PicaErrorListener.java  TypeVar.java
src/main/java/org/goodmath/pica/errors/: ErrorLog.java  PicaCompilationError.java  PicaCompilationException.java  PicaSyntaxError.java  PicaSyntaxException.java  PicaTypeError.java
src/main/java/org/goodmath/pica/qgp/: BGetField.java  BSetField.java  CNew.java  (+20 more)
src/main/kotlin/org/goodmath/pica/: scopes.kt
src/main/pica/: prelude.pica
src/parser/: parser.ts  pica_syntax.ohm  pica_syntax.ohm-bundle.d.ts  pica_syntax.ohm-bundle.js
src/typeanal/: mod.rs
test_data/: test.pica
(+250 files in other folders)
